--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: ${PORT:8761}
 eureka:
+  instance:
+    preferIpAddress: true
   client:
     registerWithEureka: false
     fetchRegistry: false
