--- a/discovery-server/src/main/docker/Dockerfile
+++ b/discovery-server/src/main/docker/Dockerfile
@@ -1,6 +1,8 @@
 FROM java:8
 VOLUME /tmp
-ADD eureka-0.0.1-SNAPSHOT.jar /app.jar
+ADD discovery-server.jar /app.jar
 RUN bash -c 'touch /app.jar'
+ENV JAVA_OPTS="-Xmx256m"
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar" ]
+
 EXPOSE 8761
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
