Fixed test failure

--- a/discovery-server/src/main/resources/bootstrap.yml
+++ b/discovery-server/src/main/resources/bootstrap.yml
@@ -3,5 +3,5 @@ spring:
     name: eureka-server
   cloud:
     config:
-      uri: ${CONFIG_SERVER_URL:http://config:8888}
+      uri: http://config:8888
       fail-fast: true
