--- a/edge-server/src/main/resources/bootstrap.yml
+++ b/edge-server/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: statistics-service
+    name: edge-service
   cloud:
     config:
       uri: http://localhost:8888
