--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -1,10 +1,9 @@
 server:
-  port: ${PORT:8761}
+  port: 8761
 eureka:
   instance:
-    preferIpAddress: true
+    preferIpAddress: false
   client:
     registerWithEureka: false
-    fetchRegistry: false
   server:
     waitTimeInMsWhenSyncEmpty: 0
