--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'spring-cloud-market-sample'
 
 include "config-server"
 include "discovery-server"
+include "edge-server"
 include "statistics-service"
