Controlling startup order in docker-compose (#10)

--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,10 @@ subprojects {
 				from jar
 				into stageDir
 			}
+			copy {
+				from "src/main/docker/run.sh"
+				into stageDir
+			}
 		}
 	}
 
