--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8761
 eureka:
   instance:
-    preferIpAddress: false
+    preferIpAddress: true
   client:
     registerWithEureka: false
   server:
